# expense-tracker-backend

./: pyproject.toml
expense_tracker_backend/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
expense_tracker_backend/routes/: auth.py  expenses.py
scripts/: database_init.py
